style/style.css
body{
	margin:0px;
	font-family: Verdana,sans-serif;
	font-size:15px;
	line-height:1.5;
	background-color:whitesmoke;	
}
/*Announcment Bar on Index Page*/
.marquee {
	height: 35px;
    background: #ff0000;
    color: white;
    border-top: 1px solid #800000;
	border-bottom: 1px solid #800000;
	
 }
.marquee p {
	position: absolute;
    width: 100%;
    height: 100%;
    margin: 0;
    line-height: 40px;
    text-align: center; 
    transform: translateX(100%);
    animation: scroll-left 50s linear infinite;
	font-size: 20px;
}
               
@keyframes scroll-left {
     0% {
     transform: translateX(100%);
 }
     100% {
	transform: translateX(-100%);
         }
 }


/* Header with Logo */
.header{
	display: flex;
	flex-direction: column;
	justify-content: center;
	
}
.logo{
	font-family:'Magneto';
	font-size:200%;
	min-height:10px;
	align-items:flex-start;
}

/*Search Bar right top */
.searchglass {
  width: 80%;
  position: relative;
  display: flex;
}

.searchTerm {
  width: 100%;
  border: 3px solid #0099ff;
  border-right: none;
  padding: 10px;
  height: 41px;
  border-radius: 10px 0 0 10px;
  outline: none;
  color: #9DBFAF;
}

.searchTerm:focus{
  color: #0099ff;
}

.searchButton {
  width: 40px;
  height: 41px;
  border: 3px solid #0099ff;
  background: #0099ff;
  text-align: center;
  color: #fff;
  border-radius: 0 10px 10px 0;
  cursor: pointer;
  font-size: 25px;
}

.wrap{
  width: 15%;
  position: absolute;
  top: 8%;
  left: 75%;

}
/* Navbar */
.navbar-box{
	position: -webkit-sticky; /* Safari */
	position: sticky;
	margin:0;
	padding:0;
	top:0;
	z-index: 9999;	
	background-color:#225d5a;
	font-size: 20px;
	text-decoration: none;
}

.active {
  background-color: #33adff;
}

.header2{
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-content:flex-start;
}



.openBtn{	
	background:#99d6ff;
}


.overlay .closebtn:hover {
  color: #ccc;
}


.overlay input[type=text]:hover {
  background: #f1f1f1;
}

/*Container under Navibar:*/
.spaceunder{
	max-width: 2000px;
	margin: 40px auto 0 auto;
	padding: 20px 50px;
	flex-wrap:wrap;
	display: flex;
}
h4{
	color: #6666ff;;
}
/*Index Page*/
.main-container{
	display:flex;
}
.leftcolumn{
	flex:1;
	order:1;
	align-content:center;
	flex-basis:20%
}
.midcolumn{
	flex:1;
	order:2;
	flex-basis:60%;
	margin:0;
	padding-left:5px;
	padding-right:0;
}
.socialcolumn{
	flex:1;
	order:3;
	height:505px;
	width:20%;
	border:1px solid #ccc;
	overflow:auto;
	flex-basis:20%;
}
.welcome{
	justify-content: center;
	text-align: left;	
	align-items:center;
	border-top: 4px dotted blue;
	border-bottom: 4px dotted blue;
}
.welcome_text{
	font-family: 'Magneto';
	font-size:45px;
  align-self: center;
	line-height:1.5;
	color: blue;
}
.row {
	margin: 0 5px;
}
.row:after {
	content: "";
	display: table;
	clear: both;
  }
.card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
	padding: 16px;
	text-align: center;
	background-color: #f1f2f3;
  }

/*Reviews*/
.container-revs{
	display:flex;
	align-self:center;
	flex-basis:80%;
	margin:0;
}
.accordion-header{
	text-decoration-color: black;
	font-weight:bold;
	font-size: large;
}
.checked{
	color:goldenrod;
}
/* Contact us icon */
.box-1{
	text-align: center;
	flex:1;
	order: 1;
}
/* Location icon */
.box-2{
	text-align: center;
	flex:1;
	order: 2;	
}
/* Clock icon */
.box-3{
	text-align: center;
	flex:1;
	margin: 0 auto;
	order: 3;	
}
/* Get in touch Form Box*/
.secondunder{
	display:flex;
	flex-wrap:wrap;
	padding:10px
}
.get-form{
	text-align: center;
	flex:1;
	order:1;
	align-self: flex-start;
	margin: 20px;
    border-width:5px;  
    border-style:ridge;
	border-color: #4da6ff;
}
.formbutton {
  background-color: #0099ff;
  color: white;
  border: black;
  border-radius: 20px 20px 20px 20px;
  cursor: pointer;
  width: 300px;
  height: 50px;
  box-sizing: border-box;
  border: 1px solid #999999;
  display: inline-block;
  margin: 8px 0;
}
.formbutton:hover {
  opacity: 0.5;
}
/* Map Box */
.map{
	text-align: center;
	flex:1;
	order:2;
	border-width:5px;  
    border-style:ridge;
	border-color: #4da6ff;
}
/* Get in touch form and newsletter */
.formstyle{
	width:50%;
	height:40px;
	background-color:#cce0ff;
	border-radius: 8px 8px 8px 8px;	
}	
/* Footer */
.footer-container{
	display:flex;
	background-color: #0e2524;
	flex-wrap: wrap; 
	text-align: center;
	justify-content:center;
	align-items:center;
	color: white;
}
/* Left side of the footer */
.footer1{
	padding: 10px;
	flex:1;	
	order:1;
	border-right: 1px #ccc solid;
}
.foot2{
	color:white;
	text-decoration:none;
}
.foot2:hover{
	color:#333333;
	text-decoration: underline;
}
/* Middle of the footer */
.footer2{
	padding: 10px;
	flex:1;	
	order:2;	
}
.title1{
	color: white;
}
.social-icon{
	color:white;
	text-decoration:none;
}
.social-icon:hover{
	color:#008ae6;
}
/*Right side of the footer - newsletter*/
.footer3{
	padding: 10px;
	flex: 1;
	order:3;
	border-left: 1px #ccc solid;	
}
.newsletter {
  padding: 5px;
}

/*Button*/
.footer4{
	padding: 10px;
	flex: 80%;	
}
.footer5{
	padding: 10px;
	flex: 20%;	
}


/* Submit button*/ 
.subbutton {
  background-color: #005ce6;
  color: white;
  border: none;
  border-radius: 20px 20px 20px 20px;
  cursor: pointer;
  width: 200px;
  height: 50px;
  box-sizing: border-box;
  border: 1px solid #ccc;
  display: inline-block;
  margin: 8px 0;
}

.subbutton:hover {
  opacity: 0.8;
}
p{
	color: rgb(110, 105, 105);
}


/*Gallery page*/
/* The grid: Four equal columns that floats next to each other */
.column {
	float: left;
	width: 25%;
	padding: 10px;
  }
  
  /* Style the images inside the grid */
  .column img {
	opacity: 0.8;
	cursor: pointer;
  }
  
  .column img:hover {
	opacity: 1;
  }
  
  /* Clear floats after the columns */
  .row:after {
	content: "";
	display: table;
	clear: both;
  }
/* ... */

